fixed homepage horizontal scroll and formatted FAQs, implemented EmailJS, minor changes before finalisation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.25),
         -5px -5px 15px rgba(0, 0, 0, 0.25);
 }
+
 .hero-image {
     width: 100%;
     min-height: 40vh;
@@ -83,35 +84,47 @@
 }
 
 /* FAQs section--------------------------------- */
+.faq-heading {
+    text-align: center;
+    font-weight: 600;
+    color: var(--white);
+    border-radius: 20px;
+    justify-self: center;
+}
 
 .FAQs {
-   
+    margin: 10px;
+    padding: 20px;
 }
 
 .accordion {
-    background-color: var(--green);
-    color: #fff;
+    background-color: var(--white);
+    color: darkslategray;
     cursor: pointer;
     padding: 18px;
     width: 100%;
     border: none;
-    box-shadow: 0px 0px 10px var(--blue);
-    margin: 10px;
-    text-align: center;
+    box-shadow: 0px 0px 10px var(--white);
     outline: none;
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
     transition: 0.4s;
+    border-radius: 20px;
+    margin: 10px 10px 10px 0px;
 }
+
 
 .accordion.active,
 .accordion:hover {
     background-color: var(--blue);
+    box-shadow: 0px 0px 0px var(--white);
+    color: var(--white);
+
 }
 
 .accordion:after {
     content: '\002B';
-    color: #fff;
+    color: var(--green);
     font-weight: bold;
     font-size: x-large;
     float: left;
@@ -122,9 +135,13 @@
     content: "\2212";
 }
 
+.panel p {
+
+    color: var(--white);
+}
+
 .panel {
     padding: 0 18px;
-    background-color: white;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.5s ease-in-out;
@@ -147,5 +164,10 @@
     .hero-text,
     .hero-card {
         height: auto;
+    }
+
+    .FAQs {
+        margin: 0% 10%;
+
     }
 }
